--- a/notebooks/server/Demo.ipynb
+++ b/notebooks/server/Demo.ipynb
@@ -18,19 +18,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['autocnet_config'] = 'config/sample.yml'\n",
+    "os.environ['autocnet_config'] = '/home/jlaura/autocnet/config/sample.yml'\n",
     "os.environ['PROJ_LIB'] = '/home/ladoramkershner/miniconda3/env/autocnet_local/share/proj' #point to you local environment path\n",
+    "os.environ[\"ISISROOT\"] = \"/usgs/cpkgs/anaconda3_linux/envs/isis3.7.1\"\n",
     "\n",
     "import ctypes\n",
     "from ctypes.util import find_library\n",
     "ctypes.CDLL(find_library('usgscsm'))\n",
+    "\n",
+    "import autocnet\n",
+    "binscripts = autocnet.config['cluster']['bin']\n",
+    "os.environ['PATH'] += f':{binscripts}'\n",
     "\n",
     "from autocnet.graph.network import NetworkCandidateGraph"
    ]
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -162,18 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jlaura/autocnet/autocnet/transformation/fundamental_matrix.py:310: UserWarning: F Computation Failed.\n",
-      "  warnings.warn(\"F Computation Failed.\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This block computes the fundamental matrices\n",
     "ncg.compute_fundamental_matrices(method='ransac', maskname='fundamental')"
@@ -190,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -272,9 +266,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AutoCNet",
    "language": "python",
-   "name": "python3"
+   "name": "autocnet_refactor"
   },
   "language_info": {
    "codemirror_mode": {
