--- a/notebooks/server/Demo.ipynb
+++ b/notebooks/server/Demo.ipynb
@@ -18,15 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['autocnet_config'] = 'config/sample.yml'\n",
+    "os.environ['autocnet_config'] = '/home/ladoramkershner/projects/autocnet/config/sample_la.yml'\n",
     "os.environ['PROJ_LIB'] = '/home/ladoramkershner/miniconda3/envs/autocnet_local/share/proj' #point to you local environment path\n",
+    "os.environ[\"ISISROOT\"] = \"/usgs/cpkgs/anaconda3_linux/envs/isis3.7.0\"\n",
+    "os.environ['PATH']\n",
     "\n",
     "import ctypes\n",
     "from ctypes.util import find_library\n",
@@ -60,7 +62,7 @@
    "source": [
     "# First run\n",
     "import glob\n",
-    "ncg = NetworkCandidateGraph.from_filelist(glob.glob('/scratch/jlaura/elysium_subset/cal/*.cub'))"
+    "ncg = NetworkCandidateGraph.from_filelist('/scratch/ladoramkershner/elysium_subset_demo/cubes_raw.lis')"
    ]
   },
   {
@@ -72,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -115,17 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This block is used to compute the overlapping polygon components and then place points into them.\n",
     "from autocnet.spatial.overlap import place_points_in_overlaps\n",
     "\n",
     "# Place points\n",
-    "place_points_in_overlaps(ncg)"
+    "place_points_in_overlaps(ncg.nodes, distribute_points_kwargs={'nspts_func':lambda x: 20, 'ewpts_func':lambda x: 5})"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -160,18 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jlaura/autocnet/autocnet/transformation/fundamental_matrix.py:310: UserWarning: F Computation Failed.\n",
-      "  warnings.warn(\"F Computation Failed.\")\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# This block computes the fundamental matrices\n",
     "ncg.compute_fundamental_matrices(method='ransac', maskname='fundamental')"
@@ -188,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -202,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -235,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -249,13 +242,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ncg.to_isis('/scratch/jlaura/elysium_subset/demo.net')"
+    "ncg.to_isis('/scratch/ladoramkershner/elysium_subset_demo/demo_newisisspice.net')"
    ]
   },
   {
@@ -270,9 +263,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "autocnet_local",
    "language": "python",
-   "name": "python3"
+   "name": "autocnet_local"
   },
   "language_info": {
    "codemirror_mode": {
@@ -284,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
