reverts Demo nb

--- a/notebooks/server/Demo.ipynb
+++ b/notebooks/server/Demo.ipynb
@@ -18,17 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['autocnet_config'] = '/home/ladoramkershner/projects/autocnet/config/sample_la.yml'\n",
+    "os.environ['autocnet_config'] = 'config/sample.yml'\n",
     "os.environ['PROJ_LIB'] = '/home/ladoramkershner/miniconda3/envs/autocnet_local/share/proj' #point to you local environment path\n",
-    "os.environ[\"ISISROOT\"] = \"/usgs/cpkgs/anaconda3_linux/envs/isis3.7.0\"\n",
-    "os.environ['PATH']\n",
     "\n",
     "import ctypes\n",
     "from ctypes.util import find_library\n",
@@ -62,7 +60,7 @@
    "source": [
     "# First run\n",
     "import glob\n",
-    "ncg = NetworkCandidateGraph.from_filelist('/scratch/ladoramkershner/elysium_subset_demo/cubes_raw.lis')"
+    "ncg = NetworkCandidateGraph.from_filelist(glob.glob('/scratch/jlaura/elysium_subset/cal/*.cub'))"
    ]
   },
   {
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -117,15 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# This block is used to compute the overlapping polygon components and then place points into them.\n",
     "from autocnet.spatial.overlap import place_points_in_overlaps\n",
     "\n",
     "# Place points\n",
-    "place_points_in_overlaps(ncg.nodes, distribute_points_kwargs={'nspts_func':lambda x: 20, 'ewpts_func':lambda x: 5})"
+    "place_points_in_overlaps(ncg)"
    ]
   },
   {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -160,11 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jlaura/autocnet/autocnet/transformation/fundamental_matrix.py:310: UserWarning: F Computation Failed.\n",
+      "  warnings.warn(\"F Computation Failed.\")\n"
+     ]
+    }
+   ],
    "source": [
     "# This block computes the fundamental matrices\n",
     "ncg.compute_fundamental_matrices(method='ransac', maskname='fundamental')"
@@ -181,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -195,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -242,13 +249,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "ncg.to_isis('/scratch/ladoramkershner/elysium_subset_demo/demo_newisisspice.net')"
+    "ncg.to_isis('/scratch/jlaura/elysium_subset/demo.net')"
    ]
   },
   {
@@ -263,9 +270,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "autocnet_local",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "autocnet_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
