--- a/docs/users/workshops/FY21_workshop/network_generation.ipynb
+++ b/docs/users/workshops/FY21_workshop/network_generation.ipynb
@@ -75,7 +75,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!ls $output_directory/lvl1/*cub > $output_directory/cubes.lis\n",
@@ -97,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.config_parser import parse_config\n",
@@ -217,6 +221,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -235,7 +240,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ncg.plot()"
@@ -251,7 +258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with ncg.session_scope() as session:\n",
@@ -271,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.io.db.model import Images, Overlay\n",
@@ -293,7 +304,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with ncg.session_scope() as session:\n",
@@ -321,7 +334,6 @@
    "outputs": [],
    "source": [
     "from autocnet.io.db.model import Measures, Points\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "with ncg.session_scope() as session:\n",
     "    img = session.query(Images).first()\n",
@@ -347,6 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "n = 25\n",
     "with ncg.session_scope() as session:\n",
     "    imgs = session.query(Images).limit(n)\n",
@@ -372,7 +385,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ppio_log_dir = default_log.replace('logs', 'ppio_logs')\n",
@@ -392,7 +407,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.spatial.overlap import place_points_in_overlap\n",
@@ -409,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!squeue -u $uid | head # helpful to grab job array id"
@@ -431,7 +450,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with ncg.session_scope() as session:\n",
@@ -457,7 +478,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!ls $ppio_log_dir | head -5"
@@ -473,10 +496,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "jobid = 29378870 # put jobid int here\n",
+    "jobid = '' # put jobid int here\n",
     "!ls $ppio_log_dir/*${jobid}*.out | wc -l"
    ]
   },
@@ -491,7 +516,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!sacct -j $jobid -s 'completed' | wc -l\n",
@@ -510,7 +537,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!sacct -j $jobid -s 'failed' | head"
@@ -527,7 +556,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"jobs left on the queue: \", ncg.queue_length)"
@@ -544,7 +575,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!squeue -u $uid"
@@ -553,7 +586,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(\"jobs left on the queue: \", ncg.queue_length)"
@@ -642,7 +677,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.io.db.model import Measures\n",
@@ -669,7 +706,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with ncg.session_scope() as session:\n",
@@ -696,7 +735,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.cg.cg import distribute_points_in_geom\n",
@@ -733,6 +774,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -760,7 +802,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!squeue -u $uid | head"
@@ -776,17 +820,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "jobid = 29383721 # put jobid int here\n",
+    "jobid = '' # put jobid int here\n",
     "! ls  $ppio_log_dir/*$jobid* | wc -l"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "!sacct -j $jobid -s 'completed' | wc -l\n",
@@ -803,7 +851,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "redis_orphans = ncg.queue_length\n",
@@ -844,7 +894,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from autocnet.io.db.model import Overlay, Points, Measures\n",
@@ -948,7 +1000,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! squeue -u $uid | head"
+    "!squeue -u $uid | head"
    ]
   },
   {
@@ -996,7 +1048,7 @@
    },
    "outputs": [],
    "source": [
-    "jobid = '29394590' # put jobid int here\n",
+    "jobid = '' # put jobid int here\n",
     "! ls $subpix_log_dir/*$jobid* | wc -l"
    ]
   },
@@ -1008,24 +1060,6 @@
    "source": [
     "!sacct -j $jobid -s 'completed' | wc -l\n",
     "!sacct -j $jobid -s 'failed'    | wc -l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!sacct -j $jobid -s 'failed' --format='jobid%30'   | head"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cat $subpix_log_dir/*29394590_1.out "
    ]
   },
   {
@@ -1079,36 +1113,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pick a point id to visualize"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "pid = 265"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Run visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "from autocnet.io.db.model import Images\n",
@@ -1117,30 +1124,35 @@
     "from autocnet.utils.utils import bytescale\n",
     "\n",
     "with ncg.session_scope() as session:\n",
-    "    source = session.query(Measures, Images).join(Images, Measures.imageid==Images.id).filter(Measures.pointid==pid, Measures.template_metric==1).all()\n",
-    "    s_img = GeoDataset(source[0][1].path)\n",
-    "    sx = source[0][0].sample\n",
-    "    sy = source[0][0].line\n",
+    "    measures = session.query(Measures).filter(Measures.template_metric < 0.8, Measures.template_metric!=1).limit(1)\n",
+    "    for meas in measures:\n",
+    "        pid = meas.pointid\n",
+    "        source = session.query(Measures, Images).join(Images, Measures.imageid==Images.id).filter(Measures.pointid==pid, Measures.template_metric==1).all()\n",
+    "        s_img = GeoDataset(source[0][1].path)\n",
+    "        sx = source[0][0].sample\n",
+    "        sy = source[0][0].line\n",
     "    \n",
-    "    destination = session.query(Measures, Images).join(Images, Measures.imageid==Images.id).filter(Measures.pointid==pid, Measures.template_metric!=1).limit(1).all()\n",
-    "    d_img = GeoDataset(destination[0][1].path)\n",
-    "    dx = destination[0][0].sample\n",
-    "    dy = destination[0][0].line\n",
+    "        destination = session.query(Measures, Images).join(Images, Measures.imageid==Images.id).filter(Measures.pointid==pid, Measures.template_metric!=1).limit(1).all()\n",
+    "        d_img = GeoDataset(destination[0][1].path)\n",
+    "        dx = destination[0][0].sample\n",
+    "        dy = destination[0][0].line\n",
     "    \n",
     "    \n",
-    "image_size = (121,121)\n",
-    "template_size = (61,61)\n",
-    "s_roi = roi.Roi(s_img, sx, sy, size_x=image_size[0], size_y=image_size[1])\n",
-    "s_image = bytescale(s_roi.clip())\n",
+    "        image_size = (121,121)\n",
+    "        template_size = (61,61)\n",
+    "        s_roi = roi.Roi(s_img, sx, sy, size_x=image_size[0], size_y=image_size[1])\n",
+    "        s_image = bytescale(s_roi.clip())\n",
     "\n",
-    "d_roi = roi.Roi(d_img, dx, dy, size_x=image_size[0], size_y=image_size[1])\n",
-    "d_template = bytescale(d_roi.clip())\n",
+    "        d_roi = roi.Roi(d_img, dx, dy, size_x=image_size[0], size_y=image_size[1])\n",
+    "        d_template = bytescale(d_roi.clip())\n",
     "\n",
-    "fig, axs = plt.subplots(1, 2, figsize=(20,10));\n",
-    "axs[0].imshow(s_image, cmap='Greys');\n",
-    "axs[0].set_title('Reference');\n",
-    "axs[1].imshow(d_template, cmap='Greys');\n",
-    "axs[1].set_title('Template');"
+    "        fig, axs = plt.subplots(1, 2, figsize=(20,10));\n",
+    "        axs[0].imshow(s_image, cmap='Greys');\n",
+    "        axs[0].scatter(image_size[0], image_size[1], c='r')\n",
+    "        axs[0].set_title('Reference');\n",
+    "        axs[1].imshow(d_template, cmap='Greys');\n",
+    "        axs[1].scatter(image_size[0], image_size[1], c='r')\n",
+    "        axs[1].set_title('Template');\n"
    ]
   },
   {
@@ -1213,7 +1225,7 @@
    },
    "outputs": [],
    "source": [
-    "jobid = ________ # put jobid int here\n",
+    "jobid = '' # put jobid int here\n",
     "! ls $log_dir/*$jobid* | wc -l"
    ]
   },
