--- a/docs/users/tutorials/outlier_detection/outlier_detection.ipynb
+++ b/docs/users/tutorials/outlier_detection/outlier_detection.ipynb
@@ -2427,9 +2427,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "autocnet local",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "autocnet_local"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2441,7 +2441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
